RESOLVED FIXED 44285
Fix compilation with NETSCAPE_PLUGIN_API disabled
https://bugs.webkit.org/show_bug.cgi?id=44285
Summary Fix compilation with NETSCAPE_PLUGIN_API disabled
David Kilzer (:ddkilzer)
Reported 2010-08-19 12:10:11 PDT
Created attachment 64884 [details] Patch Reviewed by NOBODY (OOPS!). WebCore: * WebCore.exp.in: (WebCore::HTMLPlugInElement::getNPObject): Moved from general section into ENABLE(NETSCAPE_PLUGIN_API) section. (WebCore::FrameView::windowClipRectForLayer): Moved from ENABLE(NETSCAPE_PLUGIN_API) section to general section since it's used by WebKit2. * plugins/PluginView.h: Added #if ENABLE(NETSCAPE_PLUGIN_API) and #endif macros as needed to make iOS WebKit build with NETSCAPE_PLUGIN_API disabled. * plugins/PluginViewNone.cpp: Ditto. (WebCore::PluginView::platformGetValueStatic): WebKit/mac: * Plugins/Hosted/HostedNetscapePluginStream.mm: Changed USE(PLUGIN_HOST_PROCESS) to USE(PLUGIN_HOST_PROCESS) && ENABLE(NETSCAPE_PLUGIN_API). * Plugins/Hosted/NetscapePluginHostManager.mm: Ditto. * Plugins/Hosted/NetscapePluginHostProxy.mm: Ditto. * Plugins/Hosted/NetscapePluginInstanceProxy.mm: Ditto. * Plugins/Hosted/ProxyInstance.mm: Ditto. * Plugins/Hosted/WebHostedNetscapePluginView.mm: Ditto. * WebCoreSupport/WebChromeClient.mm: Ditto. (WebChromeClient::createWindow): * WebCoreSupport/WebFrameLoaderClient.mm: Ditto. (WebFrameLoaderClient::dispatchCreatePage): * WebView/WebHTMLView.mm: (needsCursorRectsSupportAtPoint): Added #if ENABLE(NETSCAPE_PLUGIN_API) and #endif macros as needed. * WebView/WebView.mm: (+[WebView _isNodeHaltedPlugin:]): Ditto. (+[WebView _hasPluginForNodeBeenHalted:]): Ditto. (+[WebView _restartHaltedPluginForNode:]): Ditto. --- 15 files changed, 108 insertions(+), 26 deletions(-)
Attachments
Patch (18.56 KB, patch)
2010-08-19 12:10 PDT, David Kilzer (:ddkilzer)
joepeck: review+
Joseph Pecoraro
Comment 1 2010-08-19 13:43:52 PDT
Comment on attachment 64884 [details] Patch r=me > diff --git a/WebCore/ChangeLog b/WebCore/ChangeLog > +2010-08-19 David Kilzer <ddkilzer@apple.com> > + > + Fix compilation with NETSCAPE_PLUGIN_API disabled > + > + Reviewed by NOBODY (OOPS!). ChangeLogs are missing a bug link, or maybe that is just webkit-patch before a bug is created?
David Kilzer (:ddkilzer)
Comment 2 2010-08-19 13:53:00 PDT
WebKit Review Bot
Comment 3 2010-08-19 13:57:00 PDT
http://trac.webkit.org/changeset/65697 might have broken Qt Linux Release minimal
David Kilzer (:ddkilzer)
Comment 4 2010-08-19 14:26:45 PDT
Attempt to fix the Qt Linux Release minimal buildbot: Committed r65707: <http://trac.webkit.org/changeset/65707>
David Kilzer (:ddkilzer)
Comment 5 2010-08-19 14:38:06 PDT
Attempt to fix the Qt Linux Release minimal buildbot round #2: Committed r65708: <http://trac.webkit.org/changeset/65708>
David Kilzer (:ddkilzer)
Comment 6 2010-08-19 15:10:02 PDT
Attempt to fix the Qt Linux Release minimal buildbot round #3: Committed r65711: <http://trac.webkit.org/changeset/65711>
Note You need to log in before you can comment on or make changes to this bug.