BUILD FIX: <http://webkit.org/b/44285> Fix compilation with NETSCAPE_PLUGIN_API disabled

Reviewed by Joseph Pecoraro.

* plugins/PluginView.cpp: Added #if ENABLE(NETSCAPE_PLUGIN_API)
and #endif macros around the source to fix the Qt Linux Release
Minimal build.

git-svn-id: svn://svn.chromium.org/blink/trunk@65707 bbb929c8-8fbe-4397-9dbb-9b2b20218538