third_party/WebKit/WebCore/plugins/PluginView.cpp
@@ -82,6 +82,8 @@ using JSC::JSValue;
 using JSC::UString;
 #endif
 
+#if ENABLE(NETSCAPE_PLUGIN_API)
+
 using std::min;
 
 using namespace WTF;
@@ -1394,3 +1396,5 @@ void PluginView::privateBrowsingStateChanged(bool privateBrowsingEnabled)
 }
 
 } // namespace WebCore
+
+#endif // ENABLE(NETSCAPE_PLUGIN_API)
